added new endpoint notices(5-9)
