# app/Http/Controllers/ProductController.php
@@ -48,7 +48,17 @@ class ProductController extends Controller
      *                      @OA\Property(property="image", type="string"),
      *                      @OA\Property(property="category_id", type="integer"),
      *                      @OA\Property(property="created_at", type="string"),
-     *                      @OA\Property(property="updated_at", type="string")
+     *                      @OA\Property(property="updated_at", type="string"),
+     *                      @OA\Property(property="categories", type="array",
+     *                       @OA\Items(
+     *                             @OA\Property(property="id", type="integer"),
+     *                             @OA\Property(property="name", type="string"),
+     *                             @OA\Property(property="url", type="string"),
+     *                             @OA\Property(property="image", type="string"),
+     *                             @OA\Property(property="created_at", type="string"),
+     *                             @OA\Property(property="updated_at", type="string")
+     *                            )
+     *                      )
      *                  )
      *              )
      *       )
@@ -57,11 +67,96 @@ class ProductController extends Controller
      */
     public function index($locale = null)
     {
-        $products = Product::orderByDesc('created_at')->get();
+        $products = Product::with('categories')->orderByDesc('created_at')->get();
         $products = $this->translate_service->translate($locale, $products, Product::class)->toArray();
         return json_encode(compact('products'));
 
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/product/{id}/{locale?}",
+     *     description="Getting product",
+     *     tags={"products"},
+     *     summary="Products",
+     *      @OA\Parameter(
+     *        description="Language",
+     *        in="path",
+     *        name="Locale",
+     *        required=false,
+     *        example="ru, en, uk",
+     *        @OA\Schema(type="string")
+     *    ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="success",
+     *          @OA\JsonContent(
+     *           @OA\Property(property="products", type="array",
+     *                @OA\Items(
+     *                      @OA\Property(property="id", type="integer"),
+     *                      @OA\Property(property="title", type="string"),
+     *                      @OA\Property(property="description", type="string"),
+     *                      @OA\Property(property="specifications", type="string"),
+     *                      @OA\Property(property="price", type="integer"),
+     *                      @OA\Property(property="image", type="string"),
+     *                      @OA\Property(property="category_id", type="integer"),
+     *                      @OA\Property(property="created_at", type="string"),
+     *                      @OA\Property(property="updated_at", type="string")
+     *                  )
+     *              )
+     *       )
+     *     )
+     * )
+     */
+    public function show($id, $locale = null)
+    {
+        $products = Product::with('categories')->where('id', $id)->get();
+        $products = $this->translate_service->translate($locale, $products, Product::class);
 
+        return json_encode(compact('products'));
+    }
+
+
+    /**
+     * @OA\Get(
+     *     path="/api/product_category/{categoryId}/{locale?}",
+     *     description="Getting category product",
+     *     tags={"products"},
+     *     summary="Products",
+     *      @OA\Parameter(
+     *        description="Language",
+     *        in="path",
+     *        name="Locale",
+     *        required=false,
+     *        example="ru, en, uk",
+     *        @OA\Schema(type="string")
+     *    ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="success",
+     *          @OA\JsonContent(
+     *           @OA\Property(property="products", type="array",
+     *                @OA\Items(
+     *                      @OA\Property(property="id", type="integer"),
+     *                      @OA\Property(property="title", type="string"),
+     *                      @OA\Property(property="description", type="string"),
+     *                      @OA\Property(property="specifications", type="string"),
+     *                      @OA\Property(property="price", type="integer"),
+     *                      @OA\Property(property="image", type="string"),
+     *                      @OA\Property(property="category_id", type="integer"),
+     *                      @OA\Property(property="created_at", type="string"),
+     *                      @OA\Property(property="updated_at", type="string")
+     *                  )
+     *              )
+     *       )
+     *     )
+     * )
+     */
+    public function productCategoryFilter($categoryId, $locale = null)
+    {
+        $products = Product::with('categories')->where('category_id', $categoryId)->get();
+        $products = $this->translate_service->translate($locale, $products, Product::class);
+
+        return json_encode(compact('products'));
+    }
 }
