# app/Models/Product.php
@@ -54,4 +54,9 @@ class Product extends Model
         return $this->hasMany(Order::class);
     }
 
+    public function categories()
+    {
+        return $this->belongsTo(Category::class, 'category_id', 'id');
+    }
+
 }
