# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\BasketController;
 use App\Http\Controllers\ContactController;
+use App\Http\Controllers\NewsController;
 use App\Http\Controllers\ProductController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -35,7 +36,10 @@ Route::post('wayforpay', [ BasketController::class, 'wayForPayRequest']);
 Route::get('/home/{locale?}', 'HomeController@index');
 Route::get('/about/{locale?}', 'AboutController@index');
 Route::get('/products/{locale?}', [ ProductController::class, 'index']);
+Route::get('/product/{id}/{locale?}', [ ProductController::class, 'show']);
+Route::get('/product_category/{categoryId}/{locale?}', [ ProductController::class, 'productCategoryFilter']);
 Route::get('/news/{locale?}', 'NewsController@index');
+Route::get('/news/{id}/{locale?}', [ NewsController::class, 'show']);
 Route::get('/services/{locale?}', 'ServiceController@index');
 Route::get('/programs/{locale?}', 'ProgramController@index');
 Route::get('contacts', [ ContactController::class, 'index']);
